--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,19 +49,17 @@ jobs:
         7z x skia.zip
         cmake -S . -B build -G Ninja \
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+          -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 \
           -DENABLE_UI=${{ matrix.enable_ui }} \
-          -DENABLE_CCACHE=$enable_ccache \
+          -DENABLE_CCACHE=$enable_ccache
           -DLAF_BACKEND=skia \
           -DSKIA_DIR=./skia \
           -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
-          -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib
+          -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib          
     - name: Compiling
       shell: bash
       run: |
         cd build && ninja
     - uses: actions/upload-artifact@v3
       with:
-        name: aseprite
-        path: |
-          D:/a/aseprite/aseprite/build/bin/data
-          D:/a/aseprite/aseprite/build/bin/aseprite.dmg
+        path: world.dmg
