--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,9 @@ jobs:
           -DENABLE_UI=${{ matrix.enable_ui }} \
           -DENABLE_CCACHE=$enable_ccache \
           -DLAF_BACKEND=skia \
-          -DSKIA_DIR=./skia \
-          -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
-          -DSKIA_LIBRARY=./skia/out/Release-x64/libskia.a \    
+          -DSKIA_DIR="./skia" \
+          -DSKIA_LIBRARY_DIR="./skia/out/Release-x64" \
+          -DSKIA_LIBRARY="./skia/out/Release-x64/libskia.a" \
     - name: Compiling
       shell: bash
       run: |
